Tidy up integer operand validation