@@ -1,9 +1,8 @@
 package function;
 
 import evaluator.env.Environment;
-import syntaxtree.Atom;
+import value.IntegerValue;
 import value.Value;
-import value.ValueType;
 
 import java.util.List;
 
@@ -14,18 +13,10 @@ public class NumsEqual implements Function {
     @Override
     public Value<?> apply(List<Value<?>> operands, Environment environment) {
         if(operands.size() == 2) {
-            Value<?> val1 = operands.get(0);
-            Value<?> val2 = operands.get(1);
+            IntegerValue integerValue1 = operands.getFirst().expectInt("=");
+            IntegerValue integerValue2 = operands.get(1).expectInt("=");
 
-            if(val1.getType() == ValueType.INTEGER_LITERAL && val2.getType() == ValueType.INTEGER_LITERAL) {
-                int int1 = (Integer)val1.getValue();
-                int int2 = (Integer)val2.getValue();
-                boolean result = int1 == int2;
-                return result ? Value.t() : Value.nil();
-            }
-            else {
-                throw new IllegalArgumentException("Expect integer args for the = operator");
-            }
+            return integerValue1.getValue().equals(integerValue2.getValue()) ? Value.t() : Value.nil();
         }
         else {
             throw new IllegalArgumentException("Expect 2 args to the = operator");
